# LearnOpenGL

./: .gitignore  CMakeLists.txt  build.bat  build.sh  conanfile.txt
.cache/clangd/index/: bar.cpp.725F1B3DD0E52A10.idx  bar.h.A686613A700C16A4.idx  camera.cpp.8F903873A54328E5.idx  camera.h.3A0C9E779134CEAC.idx  editor.cpp.191885FB96B528C3.idx  editor.h.49E6B04BE98B316F.idx  hierarchy.cpp.652B5E5B84141D1B.idx  imguiWindow.cpp.39259C61BFE97EA7.idx  imguiWindow.h.7A10EF81ACB61B9F.idx  imgui_impl_glfw.cpp.B2A9C8F4633002D4.idx  imgui_impl_glfw.h.DB00705F0F3798EB.idx  imgui_impl_opengl3.cpp.9430B4068B12E77C.idx  imgui_impl_opengl3.h.1C05CE1ADB684FA0.idx  imgui_impl_opengl3_loader.h.9FC1AB101FC35FA4.idx  input.cpp.822EF2111345DC17.idx  input.h.37D734FA7F4F4F98.idx  main.cpp.4098F6593B26A4EA.idx  mesh.cpp.77C29D9C064A9060.idx  mesh.h.05BFCD1ED0972248.idx  object.cpp.8309E5CC3DA791C1.idx  object.h.18668733E0C50E67.idx  settings.h.69764262552F03EC.idx  settingsWindow.cpp.4B8387F3CE112505.idx  settingsWindow.h.7EC99C90901DBFE9.idx  shader.h.1CAC0B9690B8506F.idx  stb.cpp.6508986A06E942AC.idx  testWindow.cpp.33F4CA4B66A38171.idx  testWindow.h.004E54AE6A271CAF.idx
src/: main.cpp  settings.h  shader.h
src/camera/: camera.cpp  camera.h
src/editor/: editor.cpp  editor.h
src/editor/panels/: bar.cpp  bar.h  hierarchy.h  settingsWindow.cpp  settingsWindow.h
src/input/: input.cpp  input.h
src/object/: mesh.cpp  mesh.h  object.cpp  object.h
